Free recon kit messaging in promo bar and trust bar

--- a/shop.html
+++ b/shop.html
@@ -1047,7 +1047,7 @@
 
     <!-- Header -->
     <!-- Promo Bar -->
-    <div class="promo-bar" id="promoBar">🔬 <strong>FREE SHIPPING</strong> on orders over $150</div>
+    <div class="promo-bar" id="promoBar">🔬 <strong>FREE SHIPPING</strong> over $150 &nbsp;·&nbsp; Free reconstitution kit with every order</div>
 
     <header>
         <div class="header-content">
@@ -1108,7 +1108,7 @@
     <section class="trust-bar">
         <div class="trust-content">
             <div class="trust-item">≥98% Purity</div>
-            <div class="trust-item">Free Supplies</div>
+            <div class="trust-item">Free Recon Kit</div>
             <div class="trust-item">Fast Shipping</div>
         </div>
     </section>
