Fix promo bar wrapping, hero subtitle with concrete info

--- a/shop.html
+++ b/shop.html
@@ -1047,7 +1047,7 @@
 
     <!-- Header -->
     <!-- Promo Bar -->
-    <div class="promo-bar" id="promoBar">🔬 <strong>FREE SHIPPING</strong> over $150 &nbsp;·&nbsp; Free reconstitution kit with every order</div>
+    <div class="promo-bar" id="promoBar">🔬 <strong>FREE SHIPPING</strong> over $150 &nbsp;·&nbsp; Free recon kit included</div>
 
     <header>
         <div class="header-content">
@@ -1100,7 +1100,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Research-Grade Peptides</h1>
-            <p>Your trusted source for research peptides</p>
+            <p>44+ compounds · Shipped from the USA</p>
         </div>
     </section>
 
