Hero hook: Browse Order Ships next business day

--- a/shop.html
+++ b/shop.html
@@ -1100,7 +1100,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Research-Grade Peptides</h1>
-            <p>44+ compounds · Shipped from the USA</p>
+            <p>Browse · Order · Ships next business day</p>
         </div>
     </section>
 
