--- a/shop.html
+++ b/shop.html
@@ -335,7 +335,7 @@
         /* Hero */
         .hero {
             background: linear-gradient(135deg, #1E40AF 0%, #2563EB 50%, #3B82F6 100%);
-            padding: 1.25rem 1rem;
+            padding: 1.75rem 1rem;
             text-align: center;
         }
 
@@ -345,18 +345,19 @@
         }
 
         .hero h1 {
-            font-size: 1.3rem;
-            font-weight: 700;
+            font-size: 1.6rem;
+            font-weight: 800;
             color: #FFFFFF;
-            margin-bottom: 0.2rem;
-            letter-spacing: -0.3px;
+            margin-bottom: 0.35rem;
+            letter-spacing: -0.5px;
         }
 
         .hero p {
-            font-size: 0.78rem;
-            color: rgba(255,255,255,0.8);
+            font-size: 0.9rem;
+            color: rgba(255,255,255,0.9);
             margin: 0;
-            letter-spacing: 0.2px;
+            letter-spacing: 0.3px;
+            font-weight: 500;
         }
 
         /* Trust Bar */
@@ -435,8 +436,8 @@
             background: #F8FAFC;
             border: 1px solid #E2E8F0;
             border-radius: 8px;
-            padding: 10px 12px;
-            min-width: 140px;
+            padding: 10px 14px;
+            min-width: 155px;
             flex-shrink: 0;
             cursor: pointer;
             transition: all 0.2s;
@@ -698,20 +699,22 @@
 
         .order-btn {
             display: block;
-            background: #06B6D4;
-            color: #FFFFFF;
+            background: none;
+            color: #06B6D4;
             text-align: center;
-            padding: 6px 0;
+            padding: 5px 0;
             border-radius: 5px;
-            font-size: 0.7rem;
+            border: 1.5px solid #06B6D4;
+            font-size: 0.68rem;
             font-weight: 700;
             text-decoration: none;
             letter-spacing: 0.3px;
-            transition: background 0.2s;
+            transition: all 0.2s;
         }
 
         .order-btn:hover {
-            background: #0891B2;
+            background: #06B6D4;
+            color: #FFFFFF;
         }
 
         .view-details {
@@ -985,12 +988,12 @@
 
         /* Responsive */
         @media (max-width: 768px) {
-            .hero h1 { font-size: 1.15rem; }
-            .hero p { font-size: 0.72rem; }
-            .hero { padding: 1rem; }
+            .hero h1 { font-size: 1.4rem; }
+            .hero p { font-size: 0.85rem; }
+            .hero { padding: 1.5rem 1rem; }
             .section-heading { font-size: 1rem; }
             .section-sub { display: none; }
-            .featured-card { min-width: 120px; }
+            .featured-card { min-width: 145px; }
             nav { display: none; }
             .header-left { gap: 0; }
             .trust-item { font-size: 0.62rem; padding: 0 10px; }
