Smaller inline order buttons, remove promo bar emoji

--- a/shop.html
+++ b/shop.html
@@ -698,22 +698,21 @@
         }
 
         .order-btn {
-            display: block;
+            display: inline-block;
             background: none;
-            color: #06B6D4;
-            text-align: center;
-            padding: 5px 0;
-            border-radius: 5px;
-            border: 1.5px solid #06B6D4;
-            font-size: 0.68rem;
+            color: #2B7DE9;
+            padding: 4px 16px;
+            border-radius: 4px;
+            border: 1.5px solid #2B7DE9;
+            font-size: 0.65rem;
             font-weight: 700;
             text-decoration: none;
-            letter-spacing: 0.3px;
+            letter-spacing: 0.2px;
             transition: all 0.2s;
         }
 
         .order-btn:hover {
-            background: #06B6D4;
+            background: #2B7DE9;
             color: #FFFFFF;
         }
 
@@ -1089,7 +1088,7 @@
 
     <!-- Header -->
     <!-- Promo Bar -->
-    <div class="promo-bar" id="promoBar">🔬 <strong>FREE SHIPPING</strong> over $150 &nbsp;·&nbsp; Free recon kit included</div>
+    <div class="promo-bar" id="promoBar"><strong>FREE SHIPPING</strong> over $150 &nbsp;·&nbsp; Free recon kit included</div>
 
     <header>
         <div class="header-content">
