Shorten long product names for cleaner cards

--- a/shop.html
+++ b/shop.html
@@ -1362,7 +1362,7 @@
                 applications: "Amylin receptor signaling research, gastric emptying mechanisms, satiety pathway studies, pancreatic beta-cell co-secretion, pramlintide comparison pharmacology, calcitonin receptor family research"
             },
             {
-                name: "BPC-157/TB-500 10mg/10mg",
+                name: "BPC-157/TB-500",
                 category: "tissue",
                 price: 40,
                 coa: true,
@@ -1434,7 +1434,7 @@
                 applications: "Ghrelin receptor (GHS-R1a) pharmacology, selective GH secretion mechanisms, growth hormone pulse dynamics, somatotroph receptor selectivity, GHRP comparative studies, non-GHRH secretagogue pathways"
             },
             {
-                name: "CJC-1295 no DAC 5mg",
+                name: "CJC-1295 (no DAC)",
                 category: "gh",
                 price: 42,
                 coa: true,
@@ -1443,7 +1443,7 @@
                 applications: "GHRH analogue pharmacology, pulsatile GH release patterns, GHRH receptor binding kinetics, peptide stability mechanisms, growth hormone secretion dynamics, somatotroph physiology"
             },
             {
-                name: "CJC-1295/Ipamorelin 5mg/5mg",
+                name: "CJC-1295/Ipamorelin",
                 category: "gh",
                 price: 42,
                 coa: true,
@@ -1452,7 +1452,7 @@
                 applications: "Dual-pathway GH secretagogue studies, GHRH/ghrelin synergy mechanisms, amplified GH pulse research, combined secretagogue pharmacodynamics, maximal endogenous GH release models"
             },
             {
-                name: "HGH 191 1500iu",
+                name: "HGH 191",
                 category: "gh",
                 price: 28,
                 coa: true,
@@ -1541,7 +1541,7 @@
                 applications: "Redox biochemistry, sirtuin activation research, cellular energy metabolism, PARP enzyme function, mitochondrial studies, NAD+/NADH ratio measurement, cellular aging mechanisms, DNA repair pathways"
             },
             {
-                name: "Glutathione 1200mg Korean",
+                name: "Glutathione 1200mg",
                 category: "antioxidants",
                 price: 85,
                 coa: true,
@@ -1559,7 +1559,7 @@
                 applications: "Redox biology, oxidative stress models, glutathione peroxidase studies, cellular detoxification pathways, thiol biochemistry, xenobiotic metabolism, GSH/GSSG ratio studies, antioxidant defense mechanisms"
             },
             {
-                name: "SS-31 (Elamipretide) 10mg",
+                name: "SS-31 (Elamipretide)",
                 category: "antioxidants",
                 price: 55,
                 coa: true,
@@ -1568,7 +1568,7 @@
                 applications: "Mitochondrial membrane research, cardiolipin interaction studies, cristae structure biology, mitochondrial ROS modulation, ischemia-reperfusion models, mitochondrial bioenergetics, targeted mitochondrial protection"
             },
             {
-                name: "Thioctic Acid 25mg/5ml",
+                name: "Thioctic Acid (ALA)",
                 category: "antioxidants",
                 price: 75,
                 coa: true,
@@ -1577,7 +1577,7 @@
                 applications: "Mitochondrial cofactor function, universal antioxidant mechanisms, antioxidant regeneration studies, glucose metabolism research, neuroprotection models, metal chelation research, redox signaling pathways"
             },
             {
-                name: "Vitamin C 10mg/20ml",
+                name: "Vitamin C IV",
                 category: "antioxidants",
                 price: 75,
                 coa: true,
@@ -1667,7 +1667,7 @@
                 applications: "TREK-1 channel modulation, neuroplasticity mechanisms, neuroprotection studies, potassium channel biology, synaptic plasticity research, neurogenesis studies, neurotrophic signaling pathways"
             },
             {
-                name: "PT-141 (Bremelanotide)",
+                name: "PT-141",
                 category: "melanocortin",
                 price: 36,
                 coa: true,
@@ -1685,7 +1685,7 @@
                 applications: "μ-opioid receptor pharmacology, receptor subtype selectivity studies, opioid receptor binding kinetics, structure-activity relationships, receptor signaling mechanisms, D-amino acid peptide biology, opioid tolerance mechanisms"
             },
             {
-                name: "Botulinum Toxin Type A 100u",
+                name: "Botulinum Toxin 100u",
                 category: "cosmetic",
                 price: 135,
                 coa: true,
@@ -1694,7 +1694,7 @@
                 applications: "SNARE protein biology, synaptic vesicle fusion mechanisms, neuromuscular junction research, acetylcholine release studies, exocytosis research, presynaptic signaling, metalloprotease mechanism studies"
             },
             {
-                name: "Botulinum Toxin Type A 200u",
+                name: "Botulinum Toxin 200u",
                 category: "cosmetic",
                 price: 170,
                 coa: true,
@@ -1717,7 +1717,7 @@
         var featuredProductNames = [
             "Semaglutide",
             "Tirzepatide 30mg",
-            "BPC-157/TB-500 10mg/10mg",
+            "BPC-157/TB-500",
             "NAD+ 1000mg",
             "Sermorelin 5mg",
             "Retatrutide 20mg"
