--- a/shop.html
+++ b/shop.html
@@ -724,12 +724,13 @@
         }
 
         .info-icon {
-            font-size: 1rem;
             cursor: pointer;
-            opacity: 0.5;
+            opacity: 0.45;
             transition: opacity 0.2s;
+            display: flex;
+            align-items: center;
         }
-        .info-icon:hover { opacity: 1; }
+        .info-icon:hover { opacity: 0.8; }
 
         /* Cart Drawer */
         .cart-overlay {
@@ -1970,7 +1971,7 @@
                     '<div class="product-name">' + product.name + '</div>' +
                     '<div class="product-price">$' + product.price + '</div>' +
                     '<div class="card-actions"><button class="order-btn" data-name="' + product.name.replace(/"/g, '&quot;') + '" data-price="' + product.price + '">Add to Cart</button>' +
-                    '<span class="info-icon" title="View Details">ℹ️</span></div>';
+                    '<span class="info-icon" title="View Details"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#94A3B8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg></span></div>';
                 
                 card.addEventListener('click', function(e) {
                     var t = e.target;
