Fix mobile: shorten BEST SELLER to POPULAR, shorten category labels

--- a/shop.html
+++ b/shop.html
@@ -2152,7 +2152,7 @@
                 
                 var bestsellerBadge = '';
                 if (product.bestseller) {
-                    bestsellerBadge = '<span class="bestseller-badge">BEST SELLER</span>';
+                    bestsellerBadge = '<span class="bestseller-badge">POPULAR</span>';
                 }
                 
                 card.innerHTML = 
@@ -2185,9 +2185,9 @@
         function getCategoryName(cat) {
             var names = {
                 'neuropeptides': 'Neuropeptides',
-                'glp': 'GLP Agonists',
+                'glp': 'GLP',
                 'gh': 'Growth Hormone',
-                'tissue': 'Tissue Repair',
+                'tissue': 'Tissue',
                 'metabolic': 'Metabolic',
                 'antioxidants': 'Antioxidants',
                 'longevity': 'Longevity',
