--- a/shop.html
+++ b/shop.html
@@ -699,11 +699,11 @@
 
         .order-btn {
             display: inline-block;
-            background: none;
-            color: #2B7DE9;
-            padding: 4px 16px;
+            background: #2B7DE9;
+            color: #FFFFFF;
+            padding: 5px 18px;
             border-radius: 4px;
-            border: 1.5px solid #2B7DE9;
+            border: none;
             font-size: 0.65rem;
             font-weight: 700;
             text-decoration: none;
@@ -712,7 +712,7 @@
         }
 
         .order-btn:hover {
-            background: #2B7DE9;
+            background: #1E6FD9;
             color: #FFFFFF;
         }
 
@@ -1244,7 +1244,7 @@
             </div>
             <div class="nav-icons">
                 <button class="nav-icon" onclick="toggleSearch()" title="Search"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="M21 21l-4.35-4.35"/></svg></button>
-                <button class="nav-icon" title="Cart"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 002 1.61h9.72a2 2 0 002-1.61L23 6H6"/></svg><span class="cart-badge">0</span></button>
+                <button class="nav-icon" title="Cart"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 002 1.61h9.72a2 2 0 002-1.61L23 6H6"/></svg><span class="cart-badge" style="display:none">0</span></button>
                 <button class="hamburger" onclick="toggleMobileMenu()"><span></span><span></span><span></span></button>
             </div>
         </div>
@@ -1272,9 +1272,9 @@
     <!-- Trust Bar -->
     <section class="trust-bar">
         <div class="trust-content">
-            <div class="trust-item">≥98% Purity</div>
-            <div class="trust-item">Free Recon Kit</div>
-            <div class="trust-item">Fast Shipping</div>
+            <div class="trust-item">Third-Party Tested</div>
+            <div class="trust-item">Ships Next Day</div>
+            <div class="trust-item">Free Over $150</div>
         </div>
     </section>
 
@@ -1422,11 +1422,32 @@
         </div>
     </div>
 
+    <!-- Why PRC Section -->
+    <section style="max-width:700px;margin:1.5rem auto 0;padding:0 1rem 1.5rem">
+        <h2 style="font-size:0.85rem;font-weight:700;color:#0A1628;text-align:center;margin-bottom:1rem;letter-spacing:-0.2px">Why Researchers Choose PRC</h2>
+        <div style="display:grid;grid-template-columns:1fr 1fr;gap:0;border:1px solid #E2E8F0;border-radius:8px;overflow:hidden;font-size:0.72rem">
+            <div style="background:#F8FAFC;padding:8px 12px;font-weight:700;color:#475569;border-bottom:1px solid #E2E8F0"></div>
+            <div style="background:#F8FAFC;padding:8px 12px;font-weight:700;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0">PRC Peptides</div>
+            <div style="padding:8px 12px;color:#64748B;border-bottom:1px solid #E2E8F0">Purity Testing</div>
+            <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Double-verified: Manufacturer + Independent Lab</div>
+            <div style="padding:8px 12px;color:#64748B;border-bottom:1px solid #E2E8F0">COA Transparency</div>
+            <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Available for every product</div>
+            <div style="padding:8px 12px;color:#64748B;border-bottom:1px solid #E2E8F0">Pricing</div>
+            <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Direct sourcing — no middleman markup</div>
+            <div style="padding:8px 12px;color:#64748B;border-bottom:1px solid #E2E8F0">Shipping</div>
+            <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Next business day, discreet packaging</div>
+            <div style="padding:8px 12px;color:#64748B;border-bottom:1px solid #E2E8F0">Every Order Includes</div>
+            <div style="padding:8px 12px;color:#0A1628;border-bottom:1px solid #E2E8F0;border-left:1px solid #E2E8F0;font-weight:600">Free reconstitution kit + bac water</div>
+            <div style="padding:8px 12px;color:#64748B">Support</div>
+            <div style="padding:8px 12px;color:#0A1628;border-left:1px solid #E2E8F0;font-weight:600">Real humans, same-day responses</div>
+        </div>
+    </section>
+
     <!-- Email Signup -->
     <div style="background:#F1F5F9;padding:2rem 1.5rem;text-align:center">
         <div style="max-width:500px;margin:0 auto">
-            <div style="font-size:1rem;font-weight:700;color:#0A1628;margin-bottom:0.25rem">Stay Updated</div>
-            <div style="font-size:0.75rem;color:#64748B;margin-bottom:1rem">New compounds, restocks, and exclusive offers. No spam.</div>
+            <div style="font-size:1rem;font-weight:700;color:#0A1628;margin-bottom:0.25rem">Get Restock Alerts + Exclusive Pricing</div>
+            <div style="font-size:0.75rem;color:#64748B;margin-bottom:1rem">Be first to know about new compounds and subscriber-only discounts. No spam — ever.</div>
             <div style="display:flex;gap:8px;max-width:400px;margin:0 auto">
                 <input type="email" placeholder="Your email" style="flex:1;padding:10px 14px;border:1px solid #E2E8F0;border-radius:6px;font-size:0.85rem;font-family:inherit;outline:none">
                 <button style="background:#2B7DE9;color:#fff;border:none;padding:10px 20px;border-radius:6px;font-size:0.8rem;font-weight:700;cursor:pointer;font-family:inherit;white-space:nowrap">Sign Up</button>
@@ -2196,7 +2217,10 @@
             var total = 0;
             for (var i = 0; i < shopCart.length; i++) total += shopCart[i].quantity;
             var badge = document.querySelector('.cart-badge');
-            if (badge) badge.textContent = total;
+            if (badge) {
+                badge.textContent = total;
+                badge.style.display = total > 0 ? 'flex' : 'none';
+            }
         }
 
         function getCartSubtotal() {
