Move Retatrutide to 3rd in bestsellers after Sema and Tirz

--- a/shop.html
+++ b/shop.html
@@ -1879,10 +1879,10 @@
         var featuredProductNames = [
             "Semaglutide",
             "Tirzepatide 30mg",
+            "Retatrutide 20mg",
             "BPC-157/TB-500",
             "NAD+ 1000mg",
-            "Sermorelin 5mg",
-            "Retatrutide 20mg"
+            "Sermorelin 5mg"
         ];
 
         // Category data
