--- a/checkout.html
+++ b/checkout.html
@@ -200,6 +200,7 @@
             align-items: center;
             padding: 16px 0;
             border-bottom: 1px solid #e2e8f0;
+            gap: 12px;
         }
 
         .cart-item:last-child {
@@ -208,6 +209,7 @@
 
         .cart-item-info {
             flex: 1;
+            min-width: 0;
         }
 
         .cart-item-name {
@@ -215,6 +217,9 @@
             font-size: 15px;
             color: #0A1628;
             margin-bottom: 4px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .cart-item-price {
@@ -262,11 +267,18 @@
         }
 
         .remove-btn {
-            color: #ef4444;
-            font-size: 14px;
+            color: #94A3B8;
+            font-size: 20px;
             text-decoration: none;
-            font-weight: 600;
+            font-weight: 400;
             cursor: pointer;
+            transition: color 0.2s;
+            line-height: 1;
+            padding: 4px;
+        }
+
+        .remove-btn:hover {
+            color: #64748B;
         }
 
         .payment-option {
@@ -422,14 +434,15 @@
         }
 
         .disclaimer {
-            background: #fef3c7;
-            border: 1px solid #fbbf24;
-            border-radius: 8px;
-            padding: 12px 16px;
-            margin-bottom: 20px;
-            font-size: 13px;
-            color: #92400e;
+            background: none;
+            border: none;
+            border-radius: 0;
+            padding: 8px 16px;
+            margin-bottom: 16px;
+            font-size: 12px;
+            color: #94A3B8;
             text-align: center;
+            letter-spacing: 0.2px;
         }
 
         .empty-cart {
@@ -569,7 +582,7 @@
     <!-- Main Content -->
     <div class="container">
         <div class="disclaimer">
-            ⚠️ For research purposes only. Not for human consumption.
+            All products are for laboratory research purposes only. Not for human consumption.
         </div>
 
         <!-- Step 1: Cart -->
@@ -840,7 +853,7 @@
                 html += '<span class="qty-display">' + item.quantity + '</span>';
                 html += '<button class="qty-btn" onclick="updateQty(' + i + ', 1)">+</button>';
                 html += '</div>';
-                html += '<a class="remove-btn" onclick="removeItem(' + i + ')">Remove</a>';
+                html += '<a class="remove-btn" onclick="removeItem(' + i + ')" title="Remove">×</a>';
                 html += '</div>';
                 html += '</div>';
             }
