--- a/checkout.html
+++ b/checkout.html
@@ -812,14 +812,7 @@
                     <span class="discount-tag">5% OFF</span>
                 </div>
             </div>
-            <div class="option-card" onclick="selectPayment(this, 'cashapp')">
-                <div class="option-radio"></div>
-                <div class="option-info">
-                    <div class="option-name">Cash App</div>
-                    <div class="option-desc">Send payment directly</div>
-                    <span class="discount-tag">5% OFF</span>
-                </div>
-            </div>
+<!-- CashApp removed - Frabrizio banned, re-add under LLC later -->
         </div>
 
         <!-- Promo Code (inline, no step number) -->
